--- a/frontend/yearly_dashboard.html
+++ b/frontend/yearly_dashboard.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="operational_ui.css">
 
 </head>
-<body class="ops-body">
+<body class="ops-body dashboard-page">
     <div class="flex min-h-screen">
         <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-transparent p-6 overflow-y-auto"></nav>
         <main class="ops-main flex-1 min-w-0 overflow-x-auto">
